re #227 - fix scopebar search alignment on FF

--- a/code/resources/assets/scss/molecules/_scopebar.scss
+++ b/code/resources/assets/scss/molecules/_scopebar.scss
@@ -79,11 +79,12 @@
   }
 
   .k-scopebar__item {
-    display: table-cell;
+    display: block;
     flex: 0 0 auto;
   }
 
   .k-scopebar__search {
+    display: block;
     flex: 0 1 auto;
   }
 
